# myriad-contracts

./: README.md
near/: .editorconfig  .gitignore  Cargo.toml  README.md
near/.maintain/: build.sh  fix-lint-and-format.sh  test.sh
near/artifacts/: tipping.wasm
near/contracts/tipping/: Cargo.toml  README.md
near/contracts/tipping/src/: external.rs  ft_callback.rs  internal.rs  lib.rs  types.rs
near/contracts/tipping/src/tips_balance/: calls.rs  internal.rs  mod.rs  private_calls.rs  tests.rs  types.rs  views.rs
near/scripts/: build.sh  deploy.sh  fix-lint-and-format.sh  test.sh
near/src/: ft_callback.rs  internal.rs  lib.rs
near/src/tips_balance/: calls.rs  internal.rs  private_calls.rs  tests.rs  types.rs  views.rs
